docs/apache-airflow-providers-amazon/9.4.0/_sources/_api/airflow/providers/amazon/aws/notifications/sqs/index.rst.txt
airflow.providers.amazon.aws.notifications.sqs
==============================================

.. py:module:: airflow.providers.amazon.aws.notifications.sqs


Attributes
----------

.. autoapisummary::

   airflow.providers.amazon.aws.notifications.sqs.send_sqs_notification


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.notifications.sqs.SqsNotifier


Module Contents
---------------

.. py:class:: SqsNotifier(*, aws_conn_id = SqsHook.default_conn_name, queue_url, message_body, message_attributes = None, message_group_id = None, delay_seconds = 0, region_name = None)

   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`


   Amazon SQS (Simple Queue Service) Notifier.

   .. seealso::
       For more information on how to use this notifier, take a look at the guide:
       :ref:`howto/notifier:SqsNotifier`

   :param aws_conn_id: The :ref:`Amazon Web Services Connection id <howto/connection:aws>`
       used for AWS credentials. If this is None or empty then the default boto3 behaviour is used.
   :param queue_url: The URL of the Amazon SQS queue to which a message is sent.
   :param message_body: The message to send.
   :param message_attributes: additional attributes for the message.
       For details of the attributes parameter see :py:meth:`botocore.client.SQS.send_message`.
   :param message_group_id: This parameter applies only to FIFO (first-in-first-out) queues.
       For details of the attributes parameter see :py:meth:`botocore.client.SQS.send_message`.
   :param delay_seconds: The length of time, in seconds, for which to delay a message.
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('queue_url', 'message_body', 'message_attributes', 'message_group_id', 'delay_seconds',...



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: queue_url


   .. py:attribute:: message_body


   .. py:attribute:: message_attributes


   .. py:attribute:: message_group_id
      :value: None



   .. py:attribute:: delay_seconds
      :value: 0



   .. py:property:: hook
      :type: airflow.providers.amazon.aws.hooks.sqs.SqsHook


      Amazon SQS Hook (cached).



   .. py:method:: notify(context)

      Publish the notification message to Amazon SQS queue.



.. py:data:: send_sqs_notification

